--- a/public/pricing.html
+++ b/public/pricing.html
@@ -403,54 +403,103 @@
               </div>
 
               <div style="display: flex; flex-direction: column; gap: 20px;">
+                
                 <!-- FAQ Item 1 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">What counts as a "fix"?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">A fix is any automated SEO correction SEOLOGY.AI deploys to your site. This includes meta tag updates, broken link fixes, schema markup additions, image alt text, canonical tags, and technical optimizations. Scanning and analysis don't count toward your quota—only actual fixes deployed.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(0)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">What counts as a "fix"?</h3>
+                    <svg id="faq-icon-0" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-0" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">A fix is any automated SEO correction SEOLOGY.AI deploys to your site. This includes meta tag updates, broken link fixes, schema markup additions, image alt text, canonical tags, and technical optimizations. Scanning and analysis don't count toward your quota—only actual fixes deployed.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 2 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">Can I change plans anytime?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Yes! Upgrade or downgrade anytime. Upgrades take effect immediately with prorated billing. Downgrades take effect at the end of your current billing period. Your data and site connections are preserved when changing plans.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(1)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">Can I change plans anytime?</h3>
+                    <svg id="faq-icon-1" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-1" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">Yes! Upgrade or downgrade anytime. Upgrades take effect immediately with prorated billing. Downgrades take effect at the end of your current billing period. Your data and site connections are preserved when changing plans.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 3 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">What payment methods do you accept?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">We accept all major credit cards (Visa, Mastercard, Amex, Discover) via Stripe. Enterprise customers can pay via invoice, ACH transfer, or wire transfer with annual contracts. All prices in USD. International payments supported.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(2)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">What payment methods do you accept?</h3>
+                    <svg id="faq-icon-2" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-2" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">We accept all major credit cards (Visa, Mastercard, Amex, Discover) via Stripe. Enterprise customers can pay via invoice, ACH transfer, or wire transfer with annual contracts. All prices in USD. International payments supported.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 4 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">Is there a contract or commitment?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">No long-term contracts required for Starter and Pro plans. Cancel anytime—you'll have access until the end of your billing period. Enterprise plans require annual contracts but include volume discounts up to 40%. All plans include 14-day money-back guarantee.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(3)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">Is there a contract or commitment?</h3>
+                    <svg id="faq-icon-3" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-3" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">No long-term contracts required for Starter and Pro plans. Cancel anytime—you'll have access until the end of your billing period. Enterprise plans require annual contracts but include volume discounts up to 40%. All plans include 14-day money-back guarantee.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 5 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">What happens if I exceed my fix limit?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">On the Starter plan, you'll receive a notification when approaching your 100 fix/month limit. Fixes will pause at 100 until next month or you can upgrade to Pro for unlimited fixes. Pro and Enterprise plans have no limits—deploy as many fixes as needed.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(4)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">What happens if I exceed my fix limit?</h3>
+                    <svg id="faq-icon-4" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-4" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">On the Starter plan, you'll receive a notification when approaching your 100 fix/month limit. Fixes will pause at 100 until next month or you can upgrade to Pro for unlimited fixes. Pro and Enterprise plans have no limits—deploy as many fixes as needed.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 6 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">Do you offer discounts for nonprofits or education?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Yes! Registered 501(c)(3) nonprofits and educational institutions (.edu emails) qualify for 50% off Pro plans. Contact sales@seology.ai with proof of nonprofit status or .edu email for a discount code. Offer applies to annual plans only.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(5)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">Do you offer discounts for nonprofits or education?</h3>
+                    <svg id="faq-icon-5" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-5" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">Yes! Registered 501(c)(3) nonprofits and educational institutions (.edu emails) qualify for 50% off Pro plans. Contact sales@seology.ai with proof of nonprofit status or .edu email for a discount code. Offer applies to annual plans only.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 7 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">Can I get a refund if I'm not satisfied?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Absolutely. We offer a 14-day money-back guarantee on all paid plans. If you're not satisfied for any reason within 14 days of your first payment, contact support for a full refund—no questions asked. Refunds processed within 3-5 business days.</p>
-                </div>
-
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(6)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">Can I get a refund if I'm not satisfied?</h3>
+                    <svg id="faq-icon-6" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-6" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">Absolutely. We offer a 14-day money-back guarantee on all paid plans. If you're not satisfied for any reason within 14 days of your first payment, contact support for a full refund—no questions asked. Refunds processed within 3-5 business days.</p>
+                  </div>
+                </div>\n
                 <!-- FAQ Item 8 -->
-                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 32px;">
-                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px; color: var(--text-color-secondary, #00ff88);">What's included in Enterprise support?</h3>
-                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Enterprise customers get dedicated Slack channel, priority email/phone support (responds in <1 hour), quarterly business reviews, custom onboarding, technical account manager, SLA guarantees (99.9% uptime), and influence on product roadmap. White-label reporting and team training included.</p>
+                <div class="faq-item" style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; overflow: hidden; transition: all 0.3s ease;">
+                  <button onclick="toggleFAQ(7)" class="faq-question" style="width: 100%; text-align: left; background: none; border: none; padding: 28px 32px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease;">
+                    <h3 class="heading-style-h4" style="font-size: 18px; margin: 0; color: var(--text-color-secondary, #00ff88);">What's included in Enterprise support?</h3>
+                    <svg id="faq-icon-7" style="width: 24px; height: 24px; fill: var(--text-color-secondary, #00ff88); transition: transform 0.3s ease;" viewBox="0 0 24 24">
+                      <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/>
+                    </svg>
+                  </button>
+                  <div id="faq-answer-7" class="faq-answer" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease;">
+                    <p class="text-size-regular" style="padding: 0 32px 28px 32px; margin: 0; opacity: 0.7; line-height: 1.7;">Enterprise customers get dedicated Slack channel, priority email/phone support (responds in <1 hour), quarterly business reviews, custom onboarding, technical account manager, SLA guarantees (99.9% uptime), and influence on product roadmap. White-label reporting and team training included.</p>
+                  </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
@@ -660,6 +709,38 @@ if (window.location.hash === '#pricing-plans') {
     }
   }, 100);
 }
+</script>
+
+<script>
+function toggleFAQ(index) {
+  const answer = document.getElementById('faq-answer-' + index);
+  const icon = document.getElementById('faq-icon-' + index);
+  const isOpen = answer.style.maxHeight && answer.style.maxHeight !== '0px';
+
+  if (isOpen) {
+    answer.style.maxHeight = '0';
+    answer.style.padding = '0';
+    icon.style.transform = 'rotate(0deg)';
+  } else {
+    answer.style.maxHeight = answer.scrollHeight + 'px';
+    icon.style.transform = 'rotate(180deg)';
+  }
+}
+
+// Add hover effects
+document.addEventListener('DOMContentLoaded', function() {
+  const faqButtons = document.querySelectorAll('.faq-question');
+  faqButtons.forEach(btn => {
+    btn.addEventListener('mouseenter', function() {
+      this.parentElement.style.borderColor = 'rgba(0,255,136,0.3)';
+      this.parentElement.style.background = 'rgba(255,255,255,0.05)';
+    });
+    btn.addEventListener('mouseleave', function() {
+      this.parentElement.style.borderColor = 'rgba(255,255,255,0.08)';
+      this.parentElement.style.background = 'rgba(255,255,255,0.03)';
+    });
+  });
+});
 </script>
 </body>
 </html>
