--- a/public/careers.html
+++ b/public/careers.html
@@ -18,8 +18,14 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link rel="canonical" href="https://seology.ai/careers.html">
+  <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
+  <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
 </head>
 <body>
+  <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
+  <style>.skip-link:focus{position:static;width:auto;height:auto;background:#00ff88;color:#000;padding:8px 16px;z-index:9999;}</style>
+
   <div class="page-wrapper">
     <div id="top" data-animation="default" data-collapse="medium" data-duration="0" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="padding-global">
@@ -87,7 +93,7 @@
         </div>
       </div>
     </div>
-    <main class="main-wrapper">
+    <main class="main-wrapper" id="main-content">
       <header class="section-about-header">
         <div class="w-layout-grid header-component-grid">
           <div id="w-node-b7f0b212-aab0-7c89-5c67-3e812d0d82d6-919f1f91" class="about-title-wrap">
