--- a/public/enterprise.html
+++ b/public/enterprise.html
@@ -79,8 +79,14 @@
 /* Smooth scroll */
 html { scroll-behavior: smooth; }
 </style>
+  <link rel="canonical" href="https://seology.ai/enterprise.html">
+  <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
+  <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
 </head>
 <body>
+  <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
+  <style>.skip-link:focus{position:static;width:auto;height:auto;background:#00ff88;color:#000;padding:8px 16px;z-index:9999;}</style>
+
   <div class="page-wrapper">
     <div id="top" data-animation="default" data-collapse="medium" data-duration="0" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="padding-global">
@@ -148,7 +154,7 @@ html { scroll-behavior: smooth; }
         </div>
       </div>
     </div>
-    <main class="main-wrapper">
+    <main class="main-wrapper" id="main-content">
       <header class="section-about-header">
         <div class="w-layout-grid header-component-grid">
           <div id="w-node-b7f0b212-aab0-7c89-5c67-3e812d0d82d6-919f1f91" class="about-title-wrap">
