--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,14 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link rel="canonical" href="https://seology.ai/index.html">
+  <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
+  <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
 </head>
 <body>
+  <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
+  <style>.skip-link:focus{position:static;width:auto;height:auto;background:#00ff88;color:#000;padding:8px 16px;z-index:9999;}</style>
+
   <div class="page-wrapper">
     <div id="top" data-animation="default" data-collapse="medium" data-duration="0" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="padding-global">
@@ -88,7 +94,7 @@
         </div>
       </div>
     </div>
-    <main class="main-wrapper">
+    <main class="main-wrapper" id="main-content">
       <header class="section-home-header">
         <div class="background"></div>
         <div class="w-layout-grid header-component-grid">
@@ -1037,7 +1043,7 @@
       </div>
     </footer>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 
 <script>
