--- a/public/pricing.html
+++ b/public/pricing.html
@@ -18,8 +18,14 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link rel="canonical" href="https://seology.ai/pricing.html">
+  <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
+  <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
 </head>
 <body>
+  <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
+  <style>.skip-link:focus{position:static;width:auto;height:auto;background:#00ff88;color:#000;padding:8px 16px;z-index:9999;}</style>
+
   <div class="page-wrapper">
     <div id="top" data-animation="default" data-collapse="medium" data-duration="0" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="padding-global">
@@ -87,7 +93,7 @@
         </div>
       </div>
     </div>
-    <main class="main-wrapper">
+    <main class="main-wrapper" id="main-content">
       <header class="section-projects-header">
         <div class="padding-global">
           <div class="container-large">
@@ -133,7 +139,7 @@
                     <div class="text-size-regular" style="opacity: 0.6; font-size: 14px;">forever free</div>
                   </div>
                   <a href="contact.html" class="main-button w-inline-block" style="width: 100%; padding: 14px 24px; display: flex; justify-content: center; align-items: center; margin-bottom: 32px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1);">
-                    <div class="button-text-wrap"><div class="button-text">Get for Windows</div></div>
+                    <div class="button-text-wrap"><div class="button-text">Start Free Trial</div></div>
                   </a>
                   <div style="flex-grow: 1;">
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ 3 sites</div>
@@ -155,7 +161,7 @@
                     <div class="text-size-regular" style="opacity: 0.6; font-size: 14px;">per month</div>
                   </div>
                   <a href="contact.html" class="main-button w-inline-block" style="width: 100%; padding: 14px 24px; display: flex; justify-content: center; align-items: center; margin-bottom: 32px; background: var(--text-color-secondary, #00ff88);">
-                    <div class="button-text-wrap"><div class="button-text" style="color: #000; font-weight: 600;">Get for Windows</div></div>
+                    <div class="button-text-wrap"><div class="button-text" style="color: #000; font-weight: 600;">Start Free Trial</div></div>
                   </a>
                   <div style="flex-grow: 1;">
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Everything in Starter</div>
@@ -669,7 +675,7 @@
       </div>
     </footer>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script>
     // Billing toggle functionality
