--- a/public/roi-calculator.html
+++ b/public/roi-calculator.html
@@ -100,8 +100,14 @@
 /* Smooth scroll */
 html { scroll-behavior: smooth; }
 </style>
+  <link rel="canonical" href="https://seology.ai/roi-calculator.html">
+  <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
+  <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
 </head>
 <body>
+  <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
+  <style>.skip-link:focus{position:static;width:auto;height:auto;background:#00ff88;color:#000;padding:8px 16px;z-index:9999;}</style>
+
   <div class="page-wrapper">
     <div id="top" data-animation="default" data-collapse="medium" data-duration="0" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="padding-global">
@@ -169,7 +175,7 @@ html { scroll-behavior: smooth; }
         </div>
       </div>
     </div>
-                <main class="main-wrapper">
+                <main class="main-wrapper" id="main-content">
       <header class="section-projects-header">
         <div class="padding-global">
           <div class="container-large">
@@ -484,7 +490,7 @@ function selectIndustry(industry) {
   }, 100);
 }
 </script>
-<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6903772e8ebfd7be919f1f14" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 
 <script>
